[package]
name = "html_executor"
version = "0.2.0"
edition = "2024"
description = "Execute JS rendered HTML from a request"
license = "GPL-3.0"
repository = "https://github.com/0xlunar/html_executor"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
wreq = ["dep:wreq", "dep:wreq-util"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.12.9", optional = true, features = ["cookies"] }
wreq = { version = "6.0.0-rc.28", optional = true, features = ["cookies"] }
wreq-util = { version = "3.0.0-rc.10", optional = true }
thirtyfour = "0.34.0"
tokio = { version = "1.52.1", features = ["time", "rt-multi-thread", "full"] }
async-trait = "0.1.89"
serde_json = "1.0.149"
url = "2.5.8"
