[package]
name = "html_executor"
version = "0.2.2"
edition = "2024"
description = "Execute JS rendered HTML from a request"
license = "GPL-3.0"
repository = "https://github.com/0xlunar/html_executor"

[dependencies]
anyhow = "1.0.102"
thirtyfour = "0.34.0"
tokio = { version = "1.52.1", features = ["time"] }
serde_json = "1.0.149"
url = "2.5.8"
